# mkv-subtitle-extractor

./: Cargo.toml  README.md  update.ps1
resources/: Create-TestVideo.ps1  black10s.mkv  output_with_subs.mkv  test.ass  test.srt
src/: lib.rs  main.rs
tests/: test_extraction.rs  test_output_with_subs.rs
