[package]
name = "mkv-subtitle-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
cloud_terrastodon_core_user_input = { git = "https://github.com/aafc-cloud/Cloud-Terrastodon/", rev = "17fb3369d56880afaedcdd2a7fd01cf531b377fc" }
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
